tdf#114099 mail merge: Copy JobSetup to working doc

This is needed for the print dialog to take the
document-specific printer settings into account when
using 'SwMailMergeDlg', where the print dialog is
initialized based on the merged document.

Change-Id: I1a1659d49b3b1267ea2a36a81a865837eb105905
Reviewed-on: https://gerrit.libreoffice.org/79515
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit f4fd98fc9f1b38071a806e52c17d26725c6a33c5)